# irc-services

./: .travis.yml  Cargo.toml  README.md  mktestconfig.sh
src/: main.rs
src/data/: channel.rs  democracy.rs  derp.rs  mod.rs  resistance.rs  state.rs  user.rs
src/func/: chanserv.rs  mod.rs  nickserv.rs
