[package]

name = "irc-services"
version = "0.0.1"
authors = ["Aaron Weiss <aaronweiss74@gmail.com>"]

[features]

democracy = []
derp = []
resistance = []

[dependencies.irc]

irc = "*"
features = ["ssl"]

[dependencies.openssl]

openssl = "*"

[dependencies.rustc-serialize]

rustc-serialize = "*"
